changed file name

--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,12 @@
         <div class="max-width">
             <div class="logo"><a class="but" href="#"><img src="Image/Logo.png" alt="" style="width: 80px; height: 80px; margin-bottom: -30px; margin-top: -20px;"></a></div>
             <ul class="menu">
-                <li><a class="but" href="portfolio.html" class="menu-btn">Home</a></li>
-                <li><a class="but" href="portfolio.html#about" class="menu-btn">About</a></li>
-                <li><a class="but" href="portfolio.html#skills" class="menu-btn">Skills</a></li>
-                <li><a class="but" href="portfolio.html#education" class="menu-btn">Education</a></li>
-                <li><a class="but" href="#teams" class="menu-btn">Projects</a></li>
-                <li><a class="but" href="portfolio.html#contact" class="menu-btn">Contact</a></li>
+                <li><a class="but" href="index.html" class="menu-btn">Home</a></li>
+                <li><a class="but" href="index.html#about" class="menu-btn">About</a></li>
+                <li><a class="but" href="index.html#skills" class="menu-btn">Skills</a></li>
+                <li><a class="but" href="index.html#education" class="menu-btn">Education</a></li>
+                <li><a class="but" href="#" class="menu-btn">Projects</a></li>
+                <li><a class="but" href="index.html#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -43,7 +43,7 @@
             <div class="text-1">Welcome to</div>
             <div class="text-2">My Projects</div>
             <div class="text-3">Here are some of my works <span class="typing-2"></span></div>
-            <a class="but" href="portfolio.html#contact">Work with me</a>
+            <a class="but" href="index.html#contact">Work with me</a>
         </div>
     </div>
 </section>
@@ -214,7 +214,7 @@
 
             </div>
 
-            <a href="portfolio.html" class="back-btn">← Back to Home</a>
+            <a href="index.html" class="back-btn">← Back to Home</a>
         </div>
         
     </section>
