--- a/index.html
+++ b/index.html
@@ -283,8 +283,42 @@
     </section>
 
     <!-- footer section start -->
-    <footer>
-        <span>Created By <a href="https://www.linkedin.com/in/janine-alderete-74540329a/">Janine Maika D. Alderete</a> | <span class="far fa-copyright"></span> 2026 All rights reserved.</span>
-    </footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+            <nav>
+                <ul class="footer-links">
+                <li class="footer-link">
+                    <a title="GitHub" href="https://github.com/anialderete" target="_blank" rel="noopener">
+                    <img loading="lazy" src="IMAGE/github.svg" alt="GitHub" />
+                    </a>
+                </li>
+                <li class="footer-link">
+                    <a title="Instagram" href="https://www.instagram.com/_anialderete/" target="_blank" rel="noopener">
+                    <img loading="lazy" src="IMAGE/Instragram.svg" alt="Instagram" />
+                    </a>
+                </li>
+                <li class="footer-link">
+                    <a title="Linkedin" href="https://www.linkedin.com/in/janine-alderete-74540329a/" target="_blank" rel="noopener">
+                    <img loading="lazy" src="IMAGE/linkedin.svg" alt="Linkedin" />
+                    </a>
+                </li>
+                <li class="footer-link">
+                    <a title="Facebook" href="https://www.facebook.com/ani.alderete.439008" target="_blank" rel="noopener">
+                    <img loading="lazy" src="IMAGE/Facebook.svg" alt="Facebook" />
+                    </a>
+                </li>
+                </ul>
+            </nav>
+            <p class="footer-text">
+                <span>
+                Created By <a href="https://www.linkedin.com/in/janine-alderete-74540329a/">Janine Maika D. Alderete</a> |
+                <span class="far fa-copyright"></span> 2026 All rights reserved.
+                </span>
+            </p>
+            </div>
+        </div>
+        </footer>
+
 </body>
 </html>
