--- a/projects.html
+++ b/projects.html
@@ -123,9 +123,9 @@
 
                 <div class="card">
                     <div class="box">
-                        <img src="Image/CERTICODE.png" alt="Project 2">
+                        <img src="Image/Certicode.png" alt="Project 2">
                         <div class="text" style="font-weight: lighter;">CERTICODES</div>
-                        <a href="Image/CERTICODE.png" class="project-link">View Project</a>
+                        <a href="Image/Certicode.png" class="project-link">View Project</a>
                     </div>
                 </div>
 
