--- a/index.html
+++ b/index.html
@@ -290,22 +290,22 @@
                 <ul class="footer-links">
                 <li class="footer-link">
                     <a title="GitHub" href="https://github.com/anialderete" target="_blank" rel="noopener">
-                    <img loading="lazy" src="Image/github.svg" alt="GitHub" />
+                    <img loading="lazy" class="lo" src="Image/github-142-svgrepo-com.svg" alt="GitHub"  />
                     </a>
                 </li>
                 <li class="footer-link">
                     <a title="Instagram" href="https://www.instagram.com/_anialderete/" target="_blank" rel="noopener">
-                    <img loading="lazy" src="Image/Instragram.svg" alt="Instagram" />
+                    <img loading="lazy" class="lo" src="Image/instagram-icon-svgrepo-com.svg" alt="Instagram" />
                     </a>
                 </li>
                 <li class="footer-link">
                     <a title="Linkedin" href="https://www.linkedin.com/in/janine-alderete-74540329a/" target="_blank" rel="noopener">
-                    <img loading="lazy" src="Image/linkedin.svg" alt="Linkedin" />
+                    <img loading="lazy" class="lo" src="Image/linkedin-round-svgrepo-com.svg" alt="Linkedin" />
                     </a>
                 </li>
                 <li class="footer-link">
                     <a title="Facebook" href="https://www.facebook.com/ani.alderete.439008" target="_blank" rel="noopener">
-                    <img loading="lazy" src="Image/Facebook.svg" alt="Facebook" />
+                    <img loading="lazy" class="lo" src="Image/facebook-svgrepo-com.svg" alt="Facebook" />
                     </a>
                 </li>
                 </ul>
