--- a/projects.html
+++ b/projects.html
@@ -124,7 +124,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="Image/Certicode.png" alt="Project 2">
-                        <div class="text" style="font-weight: lighter;">CERTICODES</div>
+                        <div class="text" style="font-weight: lighter;">CERTICODE</div>
                         <a href="Image/Certicode.png" class="project-link">View Project</a>
                     </div>
                 </div>
